refactor: List<movie,date>의 쌍 리스트에서 movieList, dateList를 각각 리턴하도록 변경